--- a/jekyll/_posts/EN/2017-11-02-selfcare.tech.md
+++ b/jekyll/_posts/EN/2017-11-02-selfcare.tech.md
@@ -3,6 +3,6 @@ layout: post
 title: "selfcare.tech"
 href: http://selfcare.tech
 date: 2017-11-02 18:14:26 +0000
-tags: [self-care, collaborative, resources, directory, technology, education]
+tags: [GitHub, self-care, collaborative, resources, directory, technology, education]
 categories: EN
 ---
